[workspace]
members = [
    "contracts/pool_v2",
    "contracts/price_oracle",
    "contracts/repo_token_cw20",
    "packages/*",
]

[workspace.package]
version = "0.1.1"
authors = [
    "Bobak Rashidnia <brashidnia@figure.com>",
    "Mike Woods <mwoods@figure.com>",
    "Lee Duan <lduan@figure.com>",
]
edition = "2018"
repository = "https://github.com/figuremarkets/democratized-prime-smart-contract"

[profile.release]
opt-level = "z"
strip = true
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
democratized-prime-lib = { path = "packages/lib" }
cosmwasm-schema = "2.2.2"
cosmwasm-std = "2.2.2"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw-ownable = "2.1.0"
provwasm-mocks = "2.8.0"
provwasm-std = { version = "2.8.0", default-features = false, features = ["provenance-attribute", "provenance-exchange", "provenance-marker", "cosmos-core", "cosmos-authz"] }
result-extensions = "1.0.2"
schemars = "0.8.22"
semver = "1.0.27"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
uuid = { version = "1.19.0", default-features = false, features = ["std", "serde"] }