[package]
name = "democratized-prime-pool-v2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

exclude = [
    "democratized_prime_pool_v2.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []
library = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }

[dependencies]
democratized-prime-lib = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-ownable = { workspace = true }
provwasm-std = { workspace = true }
result-extensions = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
provwasm-mocks = { workspace = true }
